# sqlite3cpp

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  bench.cpp  gtest.cpp  sqlite3cpp.cpp  sqlite3cpp.h  sqlite3cpp.ipp  stringpiece.cc  version.h.in
examples/: regex.cpp
win/: sqlite3.def
